--- a/Page/style.css
+++ b/Page/style.css
@@ -1,45 +1,26 @@
-/* Reset */
+
+@import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,300;0,400;0,500;0,800;1,300&display=swap');
+
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
+
 *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
-*, input, button {
-    font-family: Arial, Helvetica, sans-serif;
-}
-.social {
-    margin: 16px;
-    height: 24px;
+header{
     width: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    height: 5vh;
+    overflow: hidden;
 }
-
-.github {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
 .github__icon{
-    max-width: 24px;
-    max-height: 24px;
-    width: auto;
-    height: auto;
+    width: 5vh;
+    height: 100%;
+    overflow: hidden;
 }
 
-.github__link{
-
-    font-style: normal;
-    font-weight: bold;
-    font-size: 14px;
-    line-height: 26px;
-
-    display: flex;
-    text-align: center;
-
-    color: #010101;
-
+.github__icon img{
+    width: 5vh;
+    height: 100%;
+    object-fit: scale-down;
 }
