--- a/Page/style.css
+++ b/Page/style.css
@@ -22,15 +22,17 @@ h2{
 }
 
 h3{
-    margin: 16px 0;    
+    margin: 24px 0;    
     font-size: .7rem;
     text-indent: 6ch;
     line-height:2;
     font-weight: 500;
     text-align: justify;
 }
+/* Header */
 
 .github{display: flex; align-items: center;}
+
 .github button{
     height: 100%;
     margin: 4px;
@@ -42,10 +44,13 @@ h3{
 
     font-weight: 500;
     font-size: .8rem;
+
+    cursor: pointer;
 }
 
 .github__icon img{width: 24px; height: 100%;}
 
+/* Home */
 home{
     width: 100%;
     font-family: Archivo, sans-serif;
@@ -77,6 +82,8 @@ home{
    
     font-size: .8rem;
     font-weight: 600;
+
+    cursor: pointer;
 }
 
 .buttons img{
@@ -84,8 +91,6 @@ home{
     height: 16px;
     margin-right: 4px;
 }
-
-.button__margin{margin-left: 8px;}
 
 .image__home{
     width: 100%;
@@ -99,6 +104,7 @@ home{
     filter: drop-shadow(5px 5px 5px rgb(146, 145, 145));
 }
 
+/* Alt version button*/
 .alt__version button{
     padding: 8px;
     margin-left: 16px;
@@ -113,8 +119,11 @@ home{
     font-size: .8rem;
     font-weight: 600;
     color: white;
+
+    cursor: pointer;
 }
 
+/* Info */
 info{font-family: Archivo, sans-serif;}
 
 .info__text{
@@ -127,7 +136,6 @@ info{font-family: Archivo, sans-serif;}
     width: 100%;
     height: 100%;
     padding: 16px;
-    margin-top: 20px;
 }
 
 .info__image img{
@@ -135,15 +143,15 @@ info{font-family: Archivo, sans-serif;}
     filter: drop-shadow(5px 5px 5px rgb(32, 32, 32));
 }
 
-.components{
+.components__list{
     margin-top: 16px;
     margin-left: 16px;
     list-style-type: disc;
 }
 
-.components li{margin-bottom: 4px; list-style: disc;}
+.components__list li{margin-bottom: 4px; list-style: disc;}
 
-.layers{background-color: #04BF58; border-radius: 8px;}
+.layers{background-color: #04BF58; border-radius: 8px; padding: 0px 16px;}
 
 .layers h2{font-style: italic; text-align: center;}
 
@@ -155,31 +163,12 @@ info{font-family: Archivo, sans-serif;}
     font-size: 1.1rem;
 }
 
+/* Connections */
 connections{font-family: Archivo, sans-serif;}
 
 .conn_text{margin: 16px;}
 
 .conn_text img{filter: drop-shadow(5px 5px 5px rgb(146, 145, 145));}
-
-.conn{
-    margin: 0px 18px;
-    display:flex;
-    align-items: center;
-    vertical-align:baseline;
-}
-
-.conn h2{margin:0;padding-bottom: 2px;}
-
-.conn h3 {
-    margin: 0px;
-    flex-grow: 1;
-
-    text-align: right;
-    text-indent: 0;
-    font-size: .7rem;
-    font-weight: 600;
-    font-family: Arial, Helvetica, sans-serif;
-}
 
 .separator{
     width: 100%;
@@ -201,6 +190,27 @@ connections{font-family: Archivo, sans-serif;}
 
 .separator li:last-child::after {display: none;}
 
+.conn{
+    margin: 0px 18px;
+    display:flex;
+    align-items: center;
+    vertical-align:baseline;
+}
+
+.conn h2{margin:0;padding-bottom: 2px;}
+
+.conn h3 {
+    margin: 0px;
+    flex-grow: 1;
+
+    text-align: right;
+    text-indent: 0;
+    font-size: .7rem;
+    font-weight: 600;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Footer */
 footer{background: #4f4f4f;}
 
 footer h2{
@@ -210,3 +220,96 @@ footer h2{
     font-size: .8rem;
     font-family: Archivo, sans-serif;
 }
+
+/* Media Query */
+@media (min-width: 450px){
+    
+    h1{font-size: 2.4rem;}
+    
+    h2{font-size: 1.2rem; font-weight: 300;}
+    
+    h3{
+        width: 70%;
+        font-size: 1rem;
+        font-weight: 300;
+    }
+    
+    home{
+        width: 100%;
+        display: flex;
+        flex-direction: row-reverse;
+        align-items: center;
+    }
+    
+    .github button{font-weight: 600;}
+    
+    .separator{width: auto;}
+
+    .separator h2{
+        font-size: 1.2rem;
+        text-indent: 0;
+        font-weight: 300;
+    }
+    
+    .separator h3{
+        width: auto;
+        text-indent: 0ch;
+
+        font-size: 1rem;
+        font-weight: 600;
+    }
+
+    .separator li::after{width: 95%;}
+   
+    .title{width: 55%;}
+    
+    .title h1{font-size: 3em;}
+    
+    .title h2{width: 100%; font-size: 1.2rem;}
+
+    .image__home{
+        width: 40vh;
+        margin-top: 0;
+        margin-left: 32px;       
+    }
+
+    .alt__version{
+        margin-top: 16px;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+    }
+   
+    .info__text, .conn_text{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+}
+
+@media (min-width: 670px){
+
+    .components, .connections{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    .info__image{
+        width: 55vh;
+        margin: 0px;
+        padding: 0px;
+    }
+
+    .components__list, .separator{width: 50%;}
+
+    .separator h2{font-size: .9rem; font-weight: 300;}
+    
+    .separator h3{
+        width: auto;
+        font-size: .8rem;
+        font-weight: 600;
+    }
+}
+
