--- a/assets_page/styles/documentation.css
+++ b/assets_page/styles/documentation.css
@@ -1,5 +1,18 @@
 @import url(/assets_page/styles/styles.css);
 
+pre{
+    background-color: rgb(184, 182, 182);
+    border-radius: 16px;
+    margin-top: 32px;
+    margin-bottom: 32px;
+    filter: drop-shadow(0px 5px 4px rgba(0, 0, 0, 0.1)); 
+}
+
+th{
+    text-align: left;
+}
+
+
 .home{
     display: flex;
     padding-top: 32px;
@@ -57,8 +70,15 @@
 .article div{
     padding: 16px;
     display: flex;
+    width: 90%;
     align-items: center;
     justify-content: center;
+}
+
+.article div img{
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
 }
 
 .article p{
@@ -66,6 +86,10 @@
     margin-top: 32px;
     margin-bottom: 16px;
 }
+
+.article .title {margin-top: 16px;}
+
+.article .subtitle{margin-top: 16px;}
 
 .title{
     font-size: 2rem;
